--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,5 @@ regExodusVersion=0.1.13
 lombokVersion=1.18.24
 screenManagerVersion=0.6.7
 shapeDrawerVersion=2.5.0
+tweenEngineVersion=6.3.3
 gdxVersion=1.11.0
